--- a/blogsync.yaml
+++ b/blogsync.yaml
@@ -1,5 +1,5 @@
-[shuzokato.hateblo.jp]:\n
-  username: [shuzokato]\n
-  password: [ks81gpta7q]\n
-default:\n
+[shuzokato.hateblo.jp]:
+  username: [shuzokato]
+  password: [ks81gpta7q]
+default:
   local_root: entries
