changed main to master

--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -46,4 +46,4 @@ jobs:
           git commit -m "Pull articles (automatic commit)" ;\
         fi
 
-        git push origin HEAD:main
+        git push origin HEAD:master
